Teacher search api updated